--- a/package.json
+++ b/package.json
@@ -9,15 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "14.2.15",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@react-three/postprocessing": "^2.16.6",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "@types/three": "^0.171.0",
+    "canvas-5-polyfill": "^0.1.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
+    "install": "^0.13.0",
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "sass": "^1.83.0",
+    "scss": "^0.2.4",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.171.0",
     "typescript": "5.7.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
